made some changes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         function throttleFunction() {
 
+            food_div.innerHTML = null;
+
             if (timerId) {
                 return false;
             }
